--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto": "^1.0.1"
   },
   "devDependencies": {
+    "braces": ">=2.3.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
